# Path: crates/consensus/Cargo.toml
[package]
name = "depin-sdk-consensus"
version = "0.1.0"
edition = "2021"
description = "Consensus for the DePIN SDK"
license = "MIT OR Apache-2.0"

[dependencies]
depin-sdk-api = { path = "../api" }
depin-sdk-types = { path = "../types" }
depin-sdk-crypto = { path = "../crypto", optional = true }
log = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true, optional = true }
thiserror = { workspace = true }
bytes = { workspace = true }
anyhow = { workspace = true }
libp2p = { workspace = true }
async-trait = { workspace = true }
tokio = { workspace = true, features = ["time"], optional = true }
# --- FIX: Add the missing bs58 dependency ---
bs58 = "0.4"

[features]
default = []
# A feature for each engine
round-robin = ["dep:tokio"]
poa = ["dep:tokio"]
pos = ["dep:tokio", "dep:depin-sdk-crypto", "dep:serde_json"]
tendermint = []
custom-consensus = []
