# Path: crates/contract-sdk/Cargo.toml
[package]
name = "depin-sdk-contract-sdk"
version = "0.1.0"
edition = "2021"
description = "SDK for writing smart contracts for the DePIN SDK"
license = "MIT OR Apache-2.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
# This SDK is for the WASM environment, so it doesn't have host-side dependencies.
# FIX: Add wee_alloc to provide a global memory allocator for this no_std crate.
wee_alloc = { version = "0.4.5", optional = true }

[features]
# By default, enable the allocator. This allows consumers to disable it if they
# want to provide their own allocator.
default = ["wee_alloc"]
