# Path: crates/contract/Cargo.toml
[package]
name = "ioi-contract-sdk"
version = "0.1.0"
rust-version = "1.78"
edition = "2021"
description = "SDK for writing smart contracts for the IOI SDK"
license-file = "../../LICENSE-BBSL"
repository = "https://github.com/ioi-foundation/ioi-sdk"

[lib]
crate-type = ["rlib"]

[dependencies]
# This SDK is for the WASM environment, so it doesn't have host-side dependencies.
wee_alloc = { version = "0.4.5", optional = true }
# DO NOT inherit from workspace. Specify version and features directly for no_std compatibility.
parity-scale-codec = { version = "3.7.5", default-features = false, features = [
    "derive",
] }

[features]
default = ["wee_alloc"]
std = []
