# Path: crates/contract-sdk/Cargo.toml
[package]
name = "ioi-contract-sdk"
version = "0.2.0"
edition = "2021"
description = "SDK for writing smart contracts for the IOI SDK using WASM Components"
license-file = "../../LICENSE-BBSL"
repository = "https://github.com/ioi-foundation/ioi-sdk"

[lib]
crate-type = ["rlib"]

[dependencies]
# Bindgen for the Component Model. 'macros' is REQUIRED for the generate! macro.
wit-bindgen = { version = "0.21.0", default-features = false, features = [
    "macros",
] }
parity-scale-codec = { version = "3.7.5", default-features = false, features = [
    "derive",
] }
# [NEW] Handles memcmp/memset/memcpy for wasm32-unknown-unknown
rlibc = "1.0"

# Add the macros crate dependency
ioi-macros = { path = "../macros" }

[features]
default = []
std = []
