# Path: crates/contract/Cargo.toml
[package]
name = "depin-sdk-contract"
version = "0.1.0"
rust-version = "1.78"
edition = "2021"
description = "SDK for writing smart contracts for the DePIN SDK"
license = "MIT OR Apache-2.0"

[lib]
# FIX: Change crate-type to "rlib" to make it a linkable Rust library.
crate-type = ["rlib"]

[dependencies]
# This SDK is for the WASM environment, so it doesn't have host-side dependencies.
wee_alloc = { version = "0.4.5", optional = true }

[features]
# By default, enable the allocator. This allows consumers to disable it if they
# want to provide their own allocator.
default = ["wee_alloc"]
