# Path: crates/core/Cargo.toml

[package]
name = "depin-sdk-core"
version = "0.1.0"
edition = "2021"
description = "Core types and traits for the DePIN SDK"
license = "MIT OR Apache-2.0"

[dependencies]
async-trait = { workspace = true }
log = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
thiserror = { workspace = true }
bytes = { workspace = true }
libp2p = { workspace = true }
sha2 = { workspace = true }
tokio = { workspace = true, features = ["sync"] }
hex = { workspace = true }

[features]
default = []
homomorphic = []
post-quantum = []
