# Path: crates/crypto/Cargo.toml
[package]
name = "depin-sdk-crypto"
version = "0.1.0"
edition = "2021"
description = "Cryptographic implementations for the DePIN SDK"
license = "MIT OR Apache-2.0"

[dependencies]
depin-sdk-api = { path = "../api" }
log = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
rand = { workspace = true }
bytes = { workspace = true }
dcrypt = { version = "0.14.0-beta.3", features = ["full"] }

[features]
default = []
