# Path: crates/crypto/Cargo.toml
[package]
name = "depin-sdk-crypto"
version = "0.1.0"
rust-version = "1.78"
edition = "2021"
description = "Cryptographic implementations for the DePIN SDK"
license = "MIT OR Apache-2.0"

[dependencies]
depin-sdk-api = { path = "../api" }
log = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
rand = { workspace = true }
bytes = { workspace = true }
dcrypt = { workspace = true }
anyhow = { workspace = true }
tokio = { workspace = true }
tokio-rustls = { workspace = true }
rustls = { workspace = true }
zeroize = { workspace = true }

[features]
default = []
