# Path: crates/drivers/Cargo.toml
[package]
name = "ioi-drivers"
version = "0.1.0"
edition = "2021"
description = "Native hardware drivers for IOI Agent Swarms (Eyes & Hands)"
license-file = "../../LICENSE-BBSL"
repository = "https://github.com/ioi-foundation/ioi"

[dependencies]
uuid = { version = "1.8.0", features = ["v4"] }
ioi-api = { path = "../api" }
ioi-types = { path = "../types" }
ioi-crypto = { path = "../crypto" }
ioi-scs = { path = "../scs" }
anyhow = { workspace = true }
log = { workspace = true }
tracing = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
serde_json = { workspace = true }
dcrypt = { workspace = true }

# GUI Automation
enigo = "0.2.1"
xcap = { version = "0.0.14", default-features = false }
image = "0.25"
imageproc = "0.25"
rusttype = "0.9"
ab_glyph = "0.2"
image_hasher = "2.0"
accesskit = "0.16.0"
active-win-pos-rs = "0.8"
chromiumoxide = { version = "0.5", features = ["tokio-runtime"] }
chromiumoxide_fetcher = "0.5"
futures = "0.3"
tokio = { workspace = true, features = ["process", "io-util", "sync", "rt", "macros"] }
wait-timeout = "0.2"
libc = "0.2"
walkdir = "2.4"

# PTY-backed shell sessions for OpenInterpreter parity (`sys__exec_session` on unix).
portable-pty = "0.9.0"

# [NEW] Clipboard Support
arboard = "3.3.0"

[target.'cfg(target_os = "linux")'.dependencies]
atspi = "0.19.0"

[target.'cfg(target_os = "macos")'.dependencies]
accessibility = "0.2.0"
accessibility-sys = "0.2.0"
core-foundation = "0.9"

[dev-dependencies]
tempfile = "3.3"
