# Path: crates/forge/Cargo.toml

[package]
name = "depin-sdk-forge"
version = "0.1.0"
edition = "2021"
description = "A development toolkit and end-to-end testing library for the DePIN SDK."
license = "MIT OR Apache-2.0"

[dependencies]
# CLI framework
clap = { workspace = true, features = ["derive", "cargo"] }

# Async runtime
tokio = { workspace = true, features = ["full"] }

# Error handling and utilities
anyhow = { workspace = true }
log = { workspace = true }
env_logger = { workspace = true }
tracing = { workspace = true }
serde_json = { workspace = true }
hex = { workspace = true }
serde_jcs = "0.1.0"
rand = { workspace = true }


# Workspace library crates (Forge consumes the SDK as a user would)
depin-sdk-types = { path = "../types" }
depin-sdk-api = { path = "../api" }
depin-sdk-crypto = { path = "../crypto" }
depin-sdk-validator = { path = "../validator", default-features = false }
depin-sdk-commitment = { path = "../commitment", default-features = false }
depin-sdk-client = { path = "../client" }
depin-sdk-transaction-models = { path = "../transaction_models" }
toml = { workspace = true }

# Dependencies for testing helpers that are now part of the library
reqwest = { workspace = true }
tempfile = "3.3"
bs58 = "0.4"
libp2p = { workspace = true }
prost = { workspace = true }
portpicker = "0.1.1"
bollard = "0.19"
futures-util = "0.3"
async-trait = { workspace = true }
uuid = { version = "1.8.0", features = ["v4"] }
tar = "0.4"
hyper = { workspace = true }
axum = { workspace = true }
libc = "0.2"
dcrypt = { workspace = true }

# HTTP body helpers for hyper v1 (bollard expects these shapes)
bytes = "1"
http-body-util = "0.1"

[dev-dependencies]
depin-sdk-services = { path = "../services" }
depin-sdk-chain = { path = "../chain" }
depin-sdk-network = { path = "../network" }
base64 = { workspace = true }
once_cell = { workspace = true }
cfg-if = "1.0"
ibc-client-tendermint = { workspace = true }
ibc-core-host-types = { workspace = true, features = ["std"] }
ibc-core-client-types = { workspace = true, features = ["std"] }
tendermint-testgen = { workspace = true }
tendermint = { workspace = true }
tendermint-proto = { workspace = true }
ibc-core-client-context = { workspace = true, features = ["std"] }
ibc-core-commitment-types = { workspace = true, features = ["std"] }
ibc-primitives = { workspace = true, features = ["std"] }
ibc-proto = { workspace = true, features = ["serde", "std"] }
# [+] FIX: Add parity-scale-codec as a dev-dependency for integration tests
parity-scale-codec = { workspace = true, features = ["derive", "std"] }

# The library exposes helpers, the binary provides the CLI
[lib]
name = "depin_sdk_forge"
path = "src/lib.rs"

[[bin]]
name = "forge"
path = "src/main.rs"

[features]
default = []
# Features must propagate to the validator library, which is a direct dependency.
# The node binaries are built separately by the test runner, which handles passing features.
tree-iavl = ["depin-sdk-validator/tree-iavl"]
tree-sparse-merkle = ["depin-sdk-validator/tree-sparse-merkle"]
tree-verkle = ["depin-sdk-validator/tree-verkle"]
primitive-hash = ["depin-sdk-validator/primitive-hash"]
primitive-kzg = ["depin-sdk-validator/primitive-kzg"]

# Other features also propagate to the validator lib
vm-wasm = ["depin-sdk-validator/vm-wasm"]
consensus-round-robin = ["depin-sdk-validator/consensus-round-robin"]
consensus-poa = ["depin-sdk-validator/consensus-poa"]
consensus-pos = ["depin-sdk-validator/consensus-pos"]

# Service Features
ibc-deps = ["depin-sdk-validator/ibc-deps"]

# Feature for building the malicious binary for testing
# This does not need to be propagated, as the test runner handles it.
malicious-bin = []
