[package]
name = "depin-sdk-homomorphic"
version = "0.1.0"
edition = "2021"
description = "Homomorphic operations implementation for the DePIN SDK"
license = "MIT OR Apache-2.0"

[dependencies]
depin-sdk-core = { path = "../core" }
depin-sdk-commitment-schemes = { path = "../commitment_schemes" }
log = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
rand = "0.8"
sha2 = "0.10"
curve25519-dalek = "4.0"

[features]
default = []
