[package]
name = "depin-sdk-homomorphic"
version = "0.1.0"
edition = "2021"
description = "Homomorphic operations implementation for the DePIN SDK"
license = "MIT OR Apache-2.0"

[dependencies]
depin-sdk-core = { path = "../core" }
depin-sdk-commitment-schemes = { path = "../commitment_schemes" }
log = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }

[features]
default = []
