# Path: crates/http-rpc-gateway/Cargo.toml
[package]
name = "http-rpc-gateway"
version = "0.1.0"
edition = "2021"
description = "HTTP JSON-RPC gateway for the IOI SDK's IBC host"
license = "MIT OR Apache-2.0"

[dependencies]
ioi-api = { path = "../api" }
ioi-types = { path = "../types" }
ibc-host = { path = "../ibc-host" }

anyhow = { workspace = true }
axum = { workspace = true }
tokio = { workspace = true, features = ["full"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
base64 = { workspace = true }
tower = { workspace = true, features = ["full"] }
tower-http = { workspace = true, features = ["full"] }
tracing = { workspace = true }
ipnetwork = { workspace = true }
dashmap = { workspace = true }
hex = { workspace = true }
prometheus = { workspace = true }
once_cell = "1.19"
