# Path: crates/ioi-ipc/Cargo.toml
[package]
name = "ioi-ipc"
version = "0.1.0"
rust-version = "1.78"
edition = "2021"
license-file = "../../LICENSE-BBSL"
repository = "https://github.com/ioi-foundation/ioi-sdk"

[dependencies]
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
