[package]
name = "ioi-memory"
version = "0.1.0"
edition = "2021"
description = "Memory runtime primitives for IOI agents"
license-file = "../../LICENSE-BBSL"
repository = "https://github.com/ioi-foundation/ioi"

[dependencies]
anyhow = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
thiserror = { workspace = true }
rusqlite = { version = "0.32", features = ["bundled"] }

[dev-dependencies]
tempfile = { workspace = true }
