# Path: crates/network/Cargo.toml
[package]
name = "depin-sdk-network"
version = "0.1.0"
edition = "2021"
description = "Block synchronization and networking components for the DePIN SDK"
license = "MIT OR Apache-2.0"

[dependencies]
depin-sdk-api = { path = "../api" }
depin-sdk-core = { path = "../core" }
depin-sdk-consensus = { path = "../consensus" }
log = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
serde_bytes = { workspace = true }
tokio = { workspace = true, features = ["full"] }
libp2p = { workspace = true }
futures = { workspace = true }
async-trait = { workspace = true }

[features]
default = []
