# Path: crates/node/Cargo.toml

[package]
name = "ioi-node"
version = "0.1.0"
edition = "2021"
description = "The primary validator node binary for the IOI SDK"
license-file = "../../LICENSE-BBSL"
repository = "https://github.com/ioi-foundation/ioi-sdk"

[dependencies]
# Workspace Library Crates
ioi-api = { path = "../api" }
ioi-types = { path = "../types" }
ioi-execution = { path = "../execution" }
ioi-state = { path = "../state", default-features = false }
ioi-consensus = { path = "../consensus", default-features = false }
ioi-storage = { path = "../storage" }
ioi-networking = { path = "../networking" }
ioi-tx = { path = "../tx" }
ioi-validator = { path = "../validator", default-features = false }
ioi-crypto = { path = "../crypto" }
ioi-vm-wasm = { path = "../vm/wasm", optional = true }
ioi-services = { path = "../services" }
ioi-test-utils = { path = "../test_utils" }
ioi-client = { path = "../client" }
ioi-telemetry = { path = "../telemetry" }
http-rpc-gateway = { path = "../http-rpc-gateway" }
ibc-host = { path = "../ibc-host" }
ioi-ipc = { path = "../ipc" }
zk-driver-succinct = { path = "../zk-driver-succinct", optional = true }

bincode = { workspace = true }
uuid = { version = "1.8.0", features = ["v4"] }
anyhow = { workspace = true }
clap = { workspace = true, features = [
    "derive",
    "cargo",
    "env",
], optional = true }
cfg-if = "1.0"
env_logger = { workspace = true, optional = true }
futures = { workspace = true }
hex = { workspace = true }
libp2p = { workspace = true }
log = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tokio-rustls = { workspace = true }
rcgen = { workspace = true }
serde_json = { workspace = true }
bs58 = "0.4"
async-trait = { workspace = true }
toml = { workspace = true }
axum = { workspace = true }
serde = { workspace = true }
serde_jcs = "0.1.0"
rand = { workspace = true } # Added rand

[features]
default = []

# This feature is for building the standard validator binaries.
validator-bins = [
    "dep:clap",
    "dep:env_logger",
    "ioi-validator/validator-bins",
    "ioi-consensus/round-robin",
    "dep:ioi-vm-wasm",
]

# This feature is for building the special malicious workload binary for testing.
malicious-bin = []

# State Tree features must propagate to BOTH commitment and validator crates

state-iavl = [
    "ioi-state/state-iavl",
    "ioi-validator/state-iavl",
    "commitment-hash",
]
state-sparse-merkle = [
    "ioi-state/state-sparse-merkle",
    "ioi-validator/state-sparse-merkle",
    "commitment-hash",
]
state-verkle = [
    "ioi-state/state-verkle",
    "ioi-validator/state-verkle",
    "commitment-kzg",
]
commitment-hash = ["ioi-state/commitment-hash", "ioi-validator/commitment-hash"]
commitment-kzg = ["ioi-state/commitment-kzg", "ioi-validator/commitment-kzg"]

# Consensus engine features
consensus-round-robin = [
    "ioi-validator/consensus-round-robin",
    "ioi-consensus/round-robin",
]
consensus-poa = ["ioi-validator/consensus-poa", "ioi-consensus/poa"]
consensus-pos = ["ioi-validator/consensus-pos", "ioi-consensus/pos"]

# VM Features
vm-wasm = ["dep:ioi-vm-wasm"]

# Service Features
ibc-deps = ["ioi-services/ibc-deps", "ioi-validator/ibc-deps"]

# Ethereum ZK Light Client Support
ethereum-zk = ["ioi-services/ethereum-zk", "dep:zk-driver-succinct"]

# Feature for building the malicious binary for testing
# This does not need to be propagated, as the test runner handles it.


[[bin]]
name = "orchestration"
path = "src/bin/orchestration.rs"
required-features = ["validator-bins"]

[[bin]]
name = "workload"
path = "src/bin/workload.rs"
required-features = ["validator-bins", "vm-wasm"]

[[bin]]
name = "guardian"
path = "src/bin/guardian.rs"
required-features = ["validator-bins"]

[[bin]]
name = "malicious-workload"
path = "src/bin/malicious-workload.rs"
required-features = ["malicious-bin", "validator-bins", "vm-wasm"]
