# Path: crates/node/Cargo.toml

[package]
name = "ioi-node"
version = "0.1.0"
edition = "2021"
description = "The primary validator node binary for the IOI Kernel"
license-file = "../../LICENSE-BBSL"
repository = "https://github.com/ioi-foundation/ioi"

[dependencies]
# Workspace Library Crates
ioi-api = { path = "../api" }
ioi-types = { path = "../types" }
ioi-execution = { path = "../execution" }
ioi-state = { path = "../state", default-features = false }
ioi-consensus = { path = "../consensus", default-features = false }
ioi-storage = { path = "../storage" }
ioi-networking = { path = "../networking" }
ioi-tx = { path = "../tx" }
ioi-validator = { path = "../validator", default-features = false }
ioi-crypto = { path = "../crypto" }
ioi-vm-wasm = { path = "../vm/wasm", optional = true }
ioi-services = { path = "../services", default-features = false }
ioi-client = { path = "../client" }
ioi-telemetry = { path = "../telemetry" }
ioi-ipc = { path = "../ipc" }
ioi-drivers = { path = "../drivers" }
ioi-scs = { path = "../scs" }

# [FIX] Plugins are now optional
http-rpc-gateway = { path = "../plugins/http-rpc-gateway", optional = true }
transport-verifier = { path = "../plugins/transport-verifier", optional = true }
zk-driver-succinct = { path = "../plugins/zk-driver-succinct", optional = true }

bincode = { workspace = true }
uuid = { version = "1.8.0", features = ["v4"] }
anyhow = { workspace = true }
clap = { workspace = true, features = ["derive", "cargo", "env"], optional = true }
cfg-if = "1.0"
env_logger = { workspace = true, optional = true }
futures = { workspace = true }
hex = { workspace = true }
libp2p = { workspace = true }
log = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter", "fmt"] }
tokio = { workspace = true, features = ["full"] }
tokio-rustls = { workspace = true }
rustls = { workspace = true, features = ["ring"] }
rcgen = { workspace = true }
serde_json = { workspace = true }
bs58 = "0.4"
async-trait = { workspace = true }
toml = { workspace = true }
axum = { workspace = true }
serde = { workspace = true }
serde_jcs = "0.1.0"
rand = { workspace = true }
dcrypt = { workspace = true }
base64 = { workspace = true }
parity-scale-codec = { workspace = true, features = ["std"] }
tonic = "0.11"
warp = "0.3"
libc = "0.2"
rpassword = "7.0"
atty = "0.2"
ahash = "0.8"
parking_lot = "0.12"

# Candle ML Framework (Optional)
candle-core = { version = "0.3.3", optional = true }
candle-nn = { version = "0.3.3", optional = true }
candle-transformers = { version = "0.3.3", optional = true }
tokenizers = { version = "0.15.2", optional = true }

[dev-dependencies]
tempfile = "3.3"

[features]
default = []

# This feature is for building the standard validator binaries.
validator-bins = [
    "dep:clap",
    "dep:env_logger",
    "ioi-consensus/admft", 
    "vm-wasm",
    "ioi-validator/vm-wasm", 
    "ioi-validator/validator-bins", 
]

malicious-bin = []

# State Tree features
state-iavl = [
    "ioi-state/state-iavl",
    "ioi-validator/state-iavl",
    "commitment-hash",
]

state-verkle = [
    "ioi-state/state-verkle",
    "ioi-validator/state-verkle",
    "commitment-kzg",
]

state-jellyfish = [
    "ioi-state/state-jellyfish",
    "ioi-validator/state-jellyfish",
    "commitment-hash",
]
commitment-hash = ["ioi-state/commitment-hash", "ioi-validator/commitment-hash"]
commitment-kzg = ["ioi-state/commitment-kzg", "ioi-validator/commitment-kzg"]

# Consensus engine features
consensus-admft = ["ioi-validator/consensus-admft", "ioi-consensus/admft"]

# VM Features
vm-wasm = ["dep:ioi-vm-wasm", "ioi-validator/vm-wasm"]

# Service Features
# [FIX] ibc-deps now pulls in the optional plugin crates
ibc-deps = [
    "ioi-services/ibc-deps", 
    "ioi-validator/ibc-deps",
    "dep:transport-verifier",
    "dep:http-rpc-gateway",
]

# Ethereum ZK Light Client Support
ethereum-zk = [
    "ioi-services/ethereum-zk",
    "dep:zk-driver-succinct",
    "ioi-validator/ethereum-zk",
]

real-ai = [
    "dep:candle-core",
    "dep:candle-nn",
    "dep:candle-transformers",
    "dep:tokenizers",
]

# --- Distribution Profiles (Binary Modes) ---

# 1. Local Mode (Desktop App)
# Lightest profile.
local-mode = [
    "dep:clap",
    "dep:env_logger",
    "vm-wasm",
    "ioi-validator/validator-bins",
    "commitment-hash",
    "state-iavl",      
    "consensus-admft",
]

# 2. Validator Mode (Consensus Only)
# Fast, secure, minimal attack surface. No heavy bridges.
validator-mode = [
    "dep:clap",
    "dep:env_logger",
    "vm-wasm",
    "ioi-validator/validator-bins",
    "consensus-admft",
    "state-iavl", 
    # REMOVED: ibc-deps, ethereum-zk
]

# 3. Bridge Mode (Heavy Verification)
# Runs full cross-chain verification logic.
bridge-mode = [
    "validator-mode", # Inherits base validator logic
    "ibc-deps",       # Adds transport-verifier & gateway
    "ethereum-zk",    # Adds ZK proof verification
]

# 4. Provider Mode (Compute Node)
# Optimized for AI workloads (GPU/CPU).
provider-mode = [
    "dep:clap",
    "dep:env_logger",
    "vm-wasm",
    "ioi-validator/validator-bins",
    "consensus-admft", 
    "state-iavl",      
    "real-ai",
    # Providers might need ZK to generate proofs, but verify?
    # Usually they GENERATE proofs (prover role), not verify.
    # Verification is done by Bridge/Validators.
    # So we keep it light or add "prover" features if distinct.
    "ethereum-zk",     
]

[[bin]]
name = "orchestration"
path = "src/bin/orchestration.rs"
required-features = ["validator-bins"]

[[bin]]
name = "workload"
path = "src/bin/workload.rs"
required-features = ["validator-bins", "vm-wasm"]

[[bin]]
name = "guardian"
path = "src/bin/guardian.rs"
required-features = ["validator-bins"]

[[bin]]
name = "malicious-workload"
path = "src/bin/malicious-workload.rs"
required-features = ["malicious-bin", "validator-bins", "vm-wasm"]

[[bin]]
name = "ioi-signer"
path = "src/bin/signer.rs"
required-features = ["validator-bins"]

[[bin]]
name = "ioi-local"
path = "src/bin/ioi-local.rs"
required-features = [
    "local-mode",
]

[[bin]]
name = "ioi-validator"
path = "src/bin/ioi-validator.rs"
required-features = ["validator-mode"]

[[bin]]
name = "ioi-provider"
path = "src/bin/ioi-provider.rs"
required-features = ["provider-mode"]

# [NEW] Explicit binary for the heavy bridge node
[[bin]]
name = "ioi-bridge"
path = "src/bin/ioi-validator.rs" # Reuses validator main, just different features
required-features = ["bridge-mode"]